created README with getting started guide

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "MobileVehicleTracking",
   "version": "0.1.0",
-  "private": true,
   "devDependencies": {
     "react-native-scripts": "1.11.1",
     "jest-expo": "25.0.0",
@@ -22,5 +21,10 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0"
+  },
+  "license": "GPL-3.0",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/WPIBarHarbor2018/MobileVehicleTracking.git"
   }
 }
