--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "MobileVehicleTracking",
   "version": "0.1.0",
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "global": "^4.3.2",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-run-android": "^0.0.1"
   },
   "license": "GPL-3.0",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/WPIBarHarbor2018/MobileVehicleTracking.git"
+    "type": "git",
+    "url": "https://github.com/WPIBarHarbor2018/MobileVehicleTracking.git"
   }
 }
